# Havoc

./: README.md  demon.apk  makefile
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
client/: CMakeLists.txt
client/include/Havoc/: DemonCmdDispatch.h
client/include/UserInterface/Dialogs/: Payload.hpp
client/src/Havoc/Demon/: CommandSend.cc  ConsoleInput.cc
client/src/UserInterface/Dialogs/: Payload.cc
client/src/UserInterface/Widgets/: DemonInteracted.cc  TeamserverTabSession.cc
client/src/Util/: Base.cpp
payloads/Demon/include/core/: MiniStd.h  Syscalls.h  Token.h
payloads/Demon/src/: Demon.c
payloads/Demon/src/core/: Command.c  ObjectApi.c  Socket.c  Win32.c
payloads/Demon/src/inject/: InjectUtil.c
payloads/DemonAndroid/: settings.gradle
payloads/DemonAndroid/app/: build.gradle  proguard-rules.pro
payloads/DemonAndroid/app/src/main/: AndroidManifest.xml
payloads/DemonAndroid/app/src/main/java/com/demon/agent/: MainActivity.kt
payloads/DemonAndroid/app/src/main/java/com/demon/agent/commands/: CommandDispatcher.kt
payloads/DemonAndroid/app/src/main/java/com/demon/agent/core/: AgentService.kt  BootReceiver.kt
payloads/DemonAndroid/app/src/main/java/com/demon/agent/transport/: C2Transport.kt  HavocProtocol.kt
payloads/DemonAndroid/app/src/main/res/drawable/: ic_notif.xml
payloads/DemonAndroid/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
payloads/DemonAndroid/app/src/main/res/values/: strings.xml
payloads/DemonPosix/: CMakeLists.txt  makefile
payloads/DemonPosix/include/: DemonPosix.h
payloads/DemonPosix/src/core/: Command.c  Evasion.c  Package.c  Parser.c  Persist.c  Pivot.c  Runtime.c  Transport.c  TransportSocket.c
payloads/DemonPosix/src/crypt/: AesCrypt.c
payloads/DemonPosix/src/inject/: Inject.c
payloads/DemonPosix/src/main/: Main.c
profiles/: havoc.yaotl
teamserver/: Install.sh
teamserver/cmd/server/: agent.go  dispatch.go  teamserver.go  types.go
teamserver/pkg/agent/: agent.go  demons.go.bak
teamserver/pkg/common/builder/: builder_apk.go  builder_apk_inject.go  builder_posix.go
teamserver/pkg/db/: agents.go  listeners.go
teamserver/pkg/handlers/: handlers.go  http.go
teamserver/pkg/llm/: agent.go  provider.go
teamserver/pkg/profile/: config.go
